# AndSandbox

./: README.md  main.py  pyproject.toml
Module/: APKTestSuite.py  AdbController.py  ApkAnalyzer.py  AutoExplorer.py  MitmproxyCapture.py  UiChangeMonitor.py
